[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingchain-mcp"
version = "0.1.0"
description = "STM32 CMake build chain MCP Server - LLM-controlled embedded development"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "LingChain Team" },
]
keywords = ["mcp", "stm32", "cmake", "embedded", "arm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Embedded Systems",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
lingchain-mcp = "mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/fushuo-1/LingChain"
Repository = "https://github.com/fushuo-1/LingChain"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]